// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`diffConstraints should add FK constraint 1`] = `
[
  {
    "autocommit": false,
    "constraintType": "FOREIGN KEY",
    "description": "Add FOREIGN KEY "fk_author" on "public"."posts"",
    "schema": "public",
    "severity": "safe",
    "sql": "ALTER TABLE "public"."posts" ADD CONSTRAINT "fk_author" FOREIGN KEY ("author_id") REFERENCES "public"."users" ("id") ON DELETE CASCADE ON UPDATE NO ACTION;",
    "table": "posts",
    "type": "add_constraint",
  },
]
`;

exports[`diffConstraints should add new constraint 1`] = `
[
  {
    "autocommit": false,
    "constraintType": "UNIQUE",
    "description": "Add UNIQUE "uq_email" on "public"."users"",
    "schema": "public",
    "severity": "safe",
    "sql": "ALTER TABLE "public"."users" ADD CONSTRAINT "uq_email" UNIQUE ("email");",
    "table": "users",
    "type": "add_constraint",
  },
]
`;
